5.0a2 -> 5.0a3:
    - jbj: re-add rpm2cpio.c.
    - jbj: spiffy error msgs for the XAR challenged users.
    - jbj: splint fiddles for rpmxar and rpmTag.
    - jbj: bury timedRead in pkgio.c, eliminate everywhere else.
    - jbj: eliminate (unused) hPTR_t.
    - jbj: hmm, a memory leak, add doco to the TODO file.
    - jbj: eliminate hTAG_t, use "rpmTag *" instead.
    - jbj: drill rpmTag everywhere needed in header methods.
    - jbj: unsnarl header.h from everything else.
    - jbj: eliminate hRET_t, use rpmTagData instead.
    - jbj: fix: files.c: pass union ptr, not 1st element, address.
    - jbj: eliminate hTYP_t and hCNT_t typedefs everywhere.
    - jbj: fix: python: pass pgpDig, not rpmts, as 1st arg to  headerCheck.
    - jbj: fix: python: include pkgio.h for rpmpkgRead prototype.
    - jbj: fix: package.c: pass pointer to msg, not NULL, calling rpmpkgRead.
    - jbj: eliminate rpm peculier int typedefs, use stdint types instead.
    - jbj: convert all remaining uses of int_XY to stdint types.
    - jbj: revert HEADER_XARALLOCATED gloopiness.
    - jbj: functional (and leak free) -Kvv of both *.rpm and *.xar.
    - jbj: revert xar handling to rpmio model, buffer handling in rpmxar.
    - jbj: fix: add RPMRC_FAIL where needed using -Kvv.
    - jbj: functional (and leak free) queries of both *.rpm and *.xar.
    - jbj: transparently recognize XAR magic when reading.
    - jbj: eliminate rpmpkgClean, rpmxar memory free on Fclose instead.
    - jbj: use refcounted rpmxar attached to FD_t to handle xar state.
    - jbj: switch to using rpmxar instead of rpmwf most everywhere.
    - jbj: stub in rpmio/rpmxar.c xar payload extraction.
    - jbj: create rpmWriteHeader with error msg returns.
    - jbj: use rpmReadHeader with error msg returns.
    - jbj: eliminate HDRread/HDRwrite vectors.
    - jbj: revert "rebase rpmParseState_e +256", more than rebasing needs doing.
    - jbj: convert+remove headerRead() from the API, use rpmpkgRead instead.